# django-base

./: .gitignore  README.md  pyproject.toml
djangobase/: settings.py  urls.py
tests/: test_django_base.py
