[tool.poetry]
name = "django-base"
version = "0.1.0"
description = ""
authors = ["Alexandre Karpov <alexakarpov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.1"
stripe = "^2.64.0"

[tool.poetry.dev-dependencies]
django-pytest = "^0.2.0"
black = "^21.12b0"
isort = "^5.10.1"
bpython = "^0.22.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
